# [[file:~/Workspace/Programming/gosh-rs/lbfgs/lbfgs.note::*cargo][cargo:1]]
[package]
name = "liblbfgs"
edition = "2018"
version = "0.0.16"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Fast and safe Rust implementation of LBFGS and OWL-QN algorithms ported from Naoaki Okazaki's C library libLBFGS."
homepage = "https://github.com/ybyygu/rust-lbfgs"
repository = "https://github.com/ybyygu/rust-lbfgs"
readme = "README.md"
license = "GPL-3.0-only"
exclude = ["bin/*", "docs/*", "liblbfgs/", "*.note*"]

[dependencies]
log = "0.4"
anyhow = "1"

[dev-dependencies]
approx = "0.3"
criterion = "0.2"
vecfx = "0.1"

[[bench]]
name = "rosenbrock"
harness = false
# cargo:1 ends here
