[package]
name = "liblbfgs"
edition = "2021"
version = "0.2.0"
authors = ["Wenping Guo <ybyygu@gmail.com>"]
description = "Fast and safe Rust implementation of LBFGS and OWL-QN algorithms ported from Naoaki Okazaki's C library libLBFGS."
homepage = "https://github.com/ybyygu/rust-lbfgs"
repository = "https://github.com/ybyygu/rust-lbfgs"
readme = "README.md"
license = "MIT"
exclude = ["bin/*", "docs/*", "liblbfgs/", "*.note*"]

[dependencies]
log = "0.4"
anyhow = "1"

[dev-dependencies]
approx = "0.5"
criterion = "0.3"
vecfx = "0.1"

[[bench]]
name = "rosenbrock"
harness = false
